--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,64 @@
 body {
   font-family: Palatino;
-
+  height: 100vh;
+  width: 100vw;
+  background-color: #F2DA54;
 }
 
-#title {
+#container {
+  height: 100vh;
+  display: flex;
+  /* margin-top: px; */
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Nunito', sans-serif;
+}
+
+li.recipe-list-item {
+  background-color: #47E5C0;
+  padding: 10px;
+  margin: 10px;
+  list-style-type: none;
+  border-radius: 5px;
+}
+
+#recipe-list {
+  height: 100vh;
+  display: flex;
+}
+.title {
   background-color: pink;
-  padding: 10px
+  margin: 5px;
+  padding: 10px;
+  font-size: 1.5em;
+  width: 100%;
+  text-align: center;
+
 }
 
 
 #delete-button {
-  background-color: pink;
+  background-color: #FF8263;
   border-radius: 5px;
-  font-size: 0.8em;
-  font-family: 'Roboto Mono', monospace;
+  font-size: 0.9em;
   opacity: 80%;
   padding: 7px;
 }
 
 #save-button {
-  background-color: lightgreen;
+  color: white;
+  background-color: #00BA91;
   border-radius: 5px;
-  font-size: 0.8em;
+  font-size: 0.9em;
   font-family: 'Roboto Mono', monospace;
   opacity: 80%;
   padding: 7px;
+}
+
+.form-wrapper {
+  font-size: 1.5em;
+  padding: 10px;
+  margin: 20px;
+  box-sizing: border-box;
+
 }
